@@ -34,17 +34,18 @@
 /* Columns
 -------------------------------------------------------------- */
 
-/* Use this class together with the .span-x classes
-   to create any composition of columns in a layout. */
-   
-.column {
+/* Sets up basic grid floating and margin. */
+div.span-1, div.span-2, div.span-3, div.span-4, div.span-5, 
+div.span-6, div.span-7, div.span-8, div.span-9, div.span-10, 
+div.span-11, div.span-12, div.span-13, div.span-14, div.span-15, 
+div.span-16, div.span-17, div.span-18, div.span-19, div.span-20, 
+div.span-21, div.span-22, div.span-23, div.span-24 {
   float: left;
-  margin-right: 10px;
+  margin-right: 10px;	
 }
 
-
 /* The last column in a row needs this class. */
-.last { margin-right: 0; }
+div.last { margin-right: 0; }
 
 /* Use these classes to set the width of a column. */
 .span-1   { width: 30px; }
@@ -124,14 +125,14 @@
 
 
 /* Border on right hand side of a column. */
-.border {
+div.border {
   padding-right: 4px;
   margin-right: 5px;
   border-right: 1px solid #eee;
 }
 
 /* Border with more whitespace, spans one column. */
-.colborder {
+div.colborder {
   padding-right: 24px;
   margin-right: 25px;
   border-right: 1px solid #eee;
